migrate to css vars

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,13 +23,7 @@
       "@hooks/*": ["./src/hooks/*"]
     }
   },
-  "include": [
-    "src/",
-    "index.ts",
-    "tailwind.config.js",
-    "postcss.config.js",
-    "vite.config.ts"
-  ],
+  "include": ["src/", "index.ts", "vite.config.ts"],
   "composite": true,
   "references": [{ "path": "./tsconfig.node.json" }]
 }
