--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@nitro-bio/sequence-viewers",
   "private": false,
-  "version": "1.1.11",
+  "version": "1.2.6",
   "scripts": {
     "build:ci": "vite build && pnpm build-css",
     "build": "pnpm lint && vite build && pnpm build-css",
-    "build-css": "npx tailwindcss -o ./nitro-sequence-viewers.css --minify && mv ./nitro-sequence-viewers.css ./dist/nitro-sequence-viewers.css",
+    "build-css": "npx @tailwindcss/cli -i src/index.css -o ./nitro-sequence-viewers.css --minify && mv ./nitro-sequence-viewers.css ./dist/nitro-sequence-viewers.css",
     "dev": "pnpm storybook dev -p 6006",
     "build-storybook": "storybook build",
     "format": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\" --config package.json",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.1.4",
+    "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "genbank-parser": "^1.2.4",
@@ -29,13 +30,10 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@rollup/plugin-alias": "^5.1.1",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/react": "^8.4.7",
-    "@storybook/react-vite": "^8.4.7",
-    "@storybook/test": "^8.4.7",
+    "@storybook/addon-docs": "^9.0.18",
+    "@storybook/addon-links": "^9.0.18",
+    "@storybook/react-vite": "^9.0.18",
+    "@tailwindcss/cli": "^4.1.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@types/plotly.js-basic-dist-min": "^2.12.4",
@@ -51,19 +49,18 @@
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "eslint-plugin-storybook": "^0.11.1",
+    "eslint-plugin-storybook": "^9.0.18",
     "jsdom": "^24.1.3",
     "json": "^11.0.0",
     "nodemon": "^3.1.9",
-    "postcss": "^8.4.49",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "storybook": "^8.4.7",
+    "storybook": "^9.0.18",
     "storybook-tailwind-dark-mode": "^1.0.22",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.5.4",
     "vite": "^5.4.11",
     "vite-plugin-dts": "^3.9.1",
