as seen on section + cleanup CICD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Library + Storybook Build
+name: Library Build
 
 # on all branches, on push and PR
 on:
@@ -28,7 +28,3 @@ jobs:
         run: pnpm run test
       - name: Build component Library
         run: pnpm run build:ci
-      - name: Build Storybook
-        run: pnpm run build-storybook
-        env:
-          NODE_OPTIONS: "--max_old_space_size=4096" # to get around JavaScript heap out of memory error
