--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nitro-bio/sequence-viewers",
   "private": false,
-  "version": "1.2.7",
+  "version": "1.3.4",
   "scripts": {
     "build:ci": "vite build && pnpm build-css",
     "build": "pnpm lint && vite build && pnpm build-css",
@@ -19,13 +19,15 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@biowasm/aioli": "^3.2.1",
     "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "genbank-parser": "^1.2.4",
     "lucide-react": "^0.468.0",
-    "zod": "^3.24.1"
+    "zod": "^4.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
